0.13.2.AE (Pre-Release):
-----------------------
- Fixes Fix Default Opaque Setting
  * Images meant to default to "opaque" were set to "transparent" instead.
  * This bug was introduced in v0.13.2.AD (Commit 0edf341)
- Fixes Windows Boot EFI Variable Handling
  * Windows Boot EFI Variables were not handled properly on Apple firmware
  * This resulted in an inability to boot into Windows on Macs
- Fixes Manual Stanza Handling
  * Linux and "Firmware Reboot" stanzas were not handled properly
- Fixes HiddenItem Handling
  * Hidden items could not be created or managed
- Improves Upstream Logging Format
  * Formatted for clarity
- Improves Handling of CSR Policy Toggling
  * Adds option to clear CSR to facilitate "Over The Air" updates on Mac OS v11.x (Big Sur)
  * Activated by entering "0" in place of "10" for the option to enable SIP
  * This setting is also valid when used on earlier versions of Mac OS
- Improves Handling of Manual Stanza Icons
  * Optimises search for associated icons to speed loading times up
  * Only undertakes a second search scan when required
- Improves Selection Image Handling
  * Only calls scaling function when required
- Updates Default Banner Background Colour
  * Now set at 191,191,191 RGB to better match the default grey
- Improves Embedded Image Creation Script
  * Previously updated for Python 3
  * Now updated to be run from any directory
- Aligns Driver and Tools Folders with Upstream
  * Drops '{ARCH}_drivers' and '{ARCH}_tools' Folders for upstream consistency
- Changes Token Name for Internal Consistency
  * 'suppress_verbose_apfs' to 'silence_apfs'


0.13.2.AD (04 May 2021):
-----------------------
- Fixes Memory Management Issues
  * Misc issues mainly introduced in v0.13.2.AA
  * Passes 'MyFreePool' pointer params by reference to ensure they can be set to a NULL value
- Fixes HiddenLegacy Handling
  * HiddenLegacy tags were not being handled when scanning for bootloaders