@@ -129,6 +129,8 @@ extern CHAR16 *gCsrStatus;
 EFI_STATUS SetAppleOSInfo();
 EFI_STATUS GetCsrStatus (IN OUT UINT32 *CsrValue);
 
+BOOLEAN NormaliseCSR (VOID);
+
 VOID RecordgCsrStatus (UINT32 CsrStatus, BOOLEAN DisplayMessage);
 VOID RotateCsrValue (VOID);
 VOID ForceTRIM (VOID);
